update styles a lil bit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <button id="reloadBtn"><img src="shuffle.svg" class="shuffleIcon"/>Get Another Suggestion</button>
                 </div>
             </div>
-            <img src="hero.png" />
+            <img class="heroimg" src="hero.png" />
         </section>
         <footer>
             <img src="randcric.svg" alt="Randcric" />
