update structure and styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <div class="loader">
-        Loading...
     </div>
     <div class="main">
         <section>
@@ -30,16 +29,16 @@
                     <a id="matchLink" target="_blank" rel="noopener noreferrer"></a>
                 </div>
                 <div class="r1">
-                    <button id="reloadBtn"><img src="shuffle.svg" class="shuffleIcon"/>Get Another Suggestion</button>
+                    <button id="reloadBtn"><img src="res/shuffle.svg" class="shuffleIcon"/>Get Another Suggestion</button>
                 </div>
             </div>
-            <img class="heroimg" src="hero.png" />
+            <img class="heroimg" src="res/hero.png" />
         </section>
         <footer>
-            <img src="randcric.svg" alt="Randcric" />
+            <img src="res/randcric.svg" alt="Randcric" />
             <span>
                 <a href="https://twitter.com/lilwonderspeaks" rel="noopener noreferrer">Contact</a>
-                <a href="https://repl.it/@thelittlewonder/randcric" rel="noopener noreferrer">Source</a>
+                <a href="https://github.com/thelittlewonder/randcric" rel="noopener noreferrer">Source</a>
             </span>
         </footer>
     </div>
