--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>Randcric — Random Indian cricket highlights</title>
+    <meta name="title" content="Randcric — Random Indian cricket highlights">
+    <meta name="description"
+        content="Watch a random cricket match highlight reel picked from over 1000 international & IPL matches.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#BD3538" />
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" type="image/x-icon" href="res/favicon.png" />
 </head>
 
 <body>
@@ -29,7 +33,8 @@
                     <a id="matchLink" target="_blank" rel="noopener noreferrer"></a>
                 </div>
                 <div class="r1">
-                    <button id="reloadBtn"><img src="res/shuffle.svg" class="shuffleIcon"/>Get Another Suggestion</button>
+                    <button id="reloadBtn"><img src="res/shuffle.svg" class="shuffleIcon" />Get Another
+                        Suggestion</button>
                 </div>
             </div>
             <img class="heroimg" src="res/hero.png" />
