--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     <title>Randcric — Random Indian cricket highlights</title>
     <meta name="title" content="Randcric — Random Indian cricket highlights">
     <meta name="description"
-        content="Watch a random cricket match highlight reel picked from over 1000 international & IPL matches.">
+        content="Watch a random indian cricket match highlights, picked from over 1000 international & IPL matches.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://thelittlewonder.github.io/randcric/">
+    <meta property="og:title" content="Randcric — Random Indian cricket highlights">
+    <meta property="og:description"
+        content="Watch a random indian cricket match highlights, picked from over 1000 international & IPL matches.">
+    <meta property="og:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://thelittlewonder.github.io/randcric/">
+    <meta property="twitter:title" content="Randcric — Random Indian cricket highlights">
+    <meta property="twitter:description"
+        content="Watch a random indian cricket match highlights, picked from over 1000 international & IPL matches.">
+    <meta property="twitter:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#BD3538" />
     <link rel="stylesheet" href="index.css">
