--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <meta property="og:title" content="Randcric — Random Indian cricket highlights">
     <meta property="og:description"
         content="Watch a random indian cricket match highlights, picked from over 1000 international & IPL matches.">
-    <meta property="og:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/thelittlewonder/randcric/master/res/meta.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -29,7 +28,7 @@
     <meta property="twitter:description"
         content="Watch a random indian cricket match highlights, picked from over 1000 international & IPL matches.">
     <meta property="twitter:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+        content="https://raw.githubusercontent.com/thelittlewonder/randcric/master/res/meta.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#BD3538" />
     <link rel="stylesheet" href="index.css">
@@ -51,14 +50,14 @@
                     <a id="matchLink" target="_blank" rel="noopener noreferrer"></a>
                 </div>
                 <div class="r1">
-                    <button id="reloadBtn"><img src="res/shuffle.svg" class="shuffleIcon" />Get Another
+                    <button id="reloadBtn"><img src="res/shuffle.svg" class="shuffleIcon" alt="" height="12px"/>Get Another
                         Suggestion</button>
                 </div>
             </div>
-            <img class="heroimg" src="res/hero.png" />
+            <img class="heroimg" alt="" src="res/hero.png" />
         </section>
         <footer>
-            <img src="res/randcric.svg" alt="Randcric" />
+            <img src="res/randcric.svg" alt="Randcric" width="148px" />
             <span>
                 <a href="https://twitter.com/lilwonderspeaks" rel="noopener noreferrer">Contact</a>
                 <a href="https://github.com/thelittlewonder/randcric" rel="noopener noreferrer">Source</a>
