add support link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <img src="res/randcric.svg" alt="Randcric" width="148px" />
             <span>
                 <a href="https://twitter.com/lilwonderspeaks" rel="noopener noreferrer">Contact</a>
-                <a href="https://github.com/thelittlewonder/randcric" rel="noopener noreferrer">Source</a>
+                <a href="https://ko-fi.com/thelittlewonder" rel="noopener noreferrer">Support</a>
             </span>
         </footer>
     </div>
